Fix align for example images

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -10,11 +10,7 @@
 
 .page-image {
     border: black solid 1px;
-
-    img {
-        height: 100%;
-        width: 100%;
-    }
+    text-align: center;
 }
 
 header {
